--- a/fortunetelling.service
+++ b/fortunetelling.service
@@ -2,6 +2,6 @@
 Description=fortunetelling
 [Service]
 TimeoutStartSec=0
-ExecStart=/bin/java -jar /root/fortunetelling/build/libs/fortunetelling-1.0.jar --server.port=5001
+ExecStart=/bin/java -Xms60m -Xmx60m -Xmn30m -jar /root/fortunetelling/build/libs/fortunetelling-1.0.jar --server.port=5001
 [Install]
 WantedBy=multi-user.target
